link overflow fix

--- a/assets/scss/single/article.scss
+++ b/assets/scss/single/article.scss
@@ -1,4 +1,5 @@
 .article {
+    word-wrap: break-word;
     p {
         font-family: 'nunito';
         line-height: 1.5em;
